nav-bar-responisve

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -11,5 +11,7 @@
     --dark-grey:#373737;
     --oranange:#ff5300;
     --light-grey:#7b7b7b;
-  
+    --black:#000000;
+    /* --------------font-family--------------- */
+    
 }
