--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 @import url(./root.css);
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   text-decoration: none !important;
   list-style-type: none !important;
+  font-family: "Poppins", sans-serif;
 }
 .fs-39 {
   font-size: var(--fs-39);
@@ -35,4 +37,67 @@
 }
 .light-grey {
   color: var(--light-grey);
+}
+.black {
+  color: var(--black);
+}
+.nav-links:hover {
+  color: var(--oranange);
+  transition: all 300ms linear;
+}
+.nav-btn {
+  width: 135px;
+  height: 50px;
+  border-radius: 9px;
+}
+.nav-btn:hover {
+  background: var(--oranange);
+  color: #ffffff;
+  transition: all 300ms linear;
+}
+.cursor {
+  cursor: pointer;
+}
+.w-35 {
+  min-width: 35px;
+}
+.h-35 {
+  height: 35px;
+}
+.rotated-1{
+  transform-origin: left;
+  transform: rotate(35deg);
+}
+.rotated-2{
+  transform-origin: left;
+  transform: rotate(-35deg);
+}
+
+/* -------------------------------Responsive--------------------- */
+@media (max-width: 992px) {
+  .nav-menubar {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh;
+    position: fixed;
+    justify-content: center;
+    top: 0;
+    bottom: 0;
+    right: -100%;
+    transition: all 300ms linear;
+    background: var(--bg-color);
+  }
+  .show-nav {
+    right: 0 !important;
+  }
+  .line1 {
+    width: 35px;
+    display: flex;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    height: 5px;
+    transition: all 300ms linear;
+    background-color:black;
+  }
 }
