--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -6,12 +6,17 @@
     --fs-20:20px;
     --fs-48:48px;
     --fs-25:25px;
+    --fs-64:64px;
     /* ------------colors----------- */
     --bg-color:#fff7f4;
     --dark-grey:#373737;
     --oranange:#ff5300;
     --light-grey:#7b7b7b;
     --black:#000000;
+    --bg-oranage:#ff5300;
+    --white:#ffffff;
+    --light-white: #EFEFEF;
+
     /* --------------font-family--------------- */
     
 }
