--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,9 @@
 .fs-25 {
   font-size: var(--fs-25);
 }
+.fs-64{
+  font-size: var(--fs-64);
+}
 .bg-color {
   background-color: var(--bg-color);
 }
@@ -40,6 +43,15 @@
 }
 .black {
   color: var(--black);
+}
+.bg-oranage{
+  background: var( --bg-oranage);
+}
+.white{
+  color: var(--white);
+}
+.light-white{
+  color: var(--light-white);
 }
 .nav-links:hover {
   color: var(--oranange);
@@ -64,15 +76,57 @@
 .h-35 {
   height: 35px;
 }
-.rotated-1{
+.rotated-1 {
   transform-origin: left;
   transform: rotate(35deg);
 }
-.rotated-2{
+.rotated-2 {
   transform-origin: left;
   transform: rotate(-35deg);
 }
+.pt-208{
+  padding-top: 208px;
+}
+.hero-section-btn{
+  width: Hug 182px;
+height: Hug50px;
+padding: 10px 22px 10px 22px;
+gap: 10px;
+border-radius: 5px;
+border: none;
+transition: all 300ms linear;
+}
+.hero-section-btn:hover{
+color: var(--oranange);
+background-color: #ffffff;
+}
+.pt-105{
+  padding-top: 105px;
+}
+.pb-149{
+  padding-bottom: 149px;
+}
+.orange-line{
+width: 40px;
+height: 0px;
+top: 17px;
+left: 485px;
+gap: 0px;
+border: 1px;
+opacity: 0px;
+border: 1px solid var(--oranange);
+}
+.border-box{
+  max-width: 370px;
+height: 100%;
+top: 121px;
+gap: 0px;
+border-radius: 10px ;
+opacity: 0px;
+box-shadow: 0px 1px 4px 0px #0000001A;
 
+
+}
 /* -------------------------------Responsive--------------------- */
 @media (max-width: 992px) {
   .nav-menubar {
@@ -98,6 +152,6 @@
     border-radius: 5px;
     height: 5px;
     transition: all 300ms linear;
-    background-color:black;
+    background-color: black;
   }
 }
