--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,31 @@ box-shadow: 0px 1px 4px 0px #0000001A;
 
 
 }
+.checmark{
+  width: 20px;
+height: 20px;
+background: #FF5300;
+border-radius: 100px;
+
+}
+.pt-129{
+  padding-top: 129px;
+}
+.pt-120{
+  padding-top: 120px;
+}
+.mt-130{
+  margin-top: 130px;
+}
+.pb-119{
+  padding-bottom: 119px;
+}
+.pb-140{
+  padding-bottom: 140px;
+}
+.mt-120{
+  margin-top: 120px;
+}
 /* -------------------------------Responsive--------------------- */
 @media (max-width: 992px) {
   .nav-menubar {
@@ -154,4 +179,73 @@ box-shadow: 0px 1px 4px 0px #0000001A;
     transition: all 300ms linear;
     background-color: black;
   }
+}
+
+
+.containerfor-input {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.containerfor-input input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius:55px
+}
+
+/* On mouse-over, add a grey background color */
+.containerfor-input:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.containerfor-input input:checked ~ .checkmark {
+  background-color:var(--oranange);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.containerfor-input input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.containerfor-input .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
