remove-extra-padding

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -16,6 +16,7 @@
     --bg-oranage:#ff5300;
     --white:#ffffff;
     --light-white: #EFEFEF;
+     --sky-blue: #1BABFE;
 
     /* --------------font-family--------------- */
     
